CVE Work Removing commons-io from dependencies, easier to use the Java 9 feature of reading bytes from an inputstream. Also upgrading fastjson to latest version.