@@ -1,6 +1,5 @@
 package uk.co.autotrader.traverson.conversion;
 
-import org.apache.commons.io.IOUtils;
 import uk.co.autotrader.traverson.exception.ConversionException;
 
 import java.io.IOException;
@@ -15,7 +14,7 @@ class ByteArrayConverter implements ResourceConverter<byte[]> {
     @Override
     public byte[] convert(InputStream resource, Class<? extends byte[]> returnType) {
         try (InputStream streamToProcess = resource) {
-            return IOUtils.toByteArray(streamToProcess);
+            return streamToProcess.readAllBytes();
         } catch (IOException e) {
             throw new ConversionException("Failed to convert the input stream to a byte array", null,  e);
         }
